# coda_tools

./: .gitignore  LICENSE  README.md  config.yml  pyproject.toml
CARSv2_tools/: __init__.py  config.yml
coda_tools/: __init__.py  util.py
notebooks/: carsv2-tools-dev-sandbox.ipynb  coda-tools-dev-sandbox.ipynb
scripts/: rsync_CODA_HBA2Gadi.sh
